--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -161,16 +161,24 @@
     /* BURGER MENU */
     input[type="checkbox"] {
         appearance: none;
-        /*background-color: red;*/
         margin: 0;
         width: 30px;
         background-image: url("../img/icons/hamburger.svg");
+        background-size: contain;
+        background-position: center;
         border-bottom: none;
         cursor: pointer;
+        /*background-color: red;*/
     }
 
-    .burger-button {
-        display: block;
+    .burger-button:checked {
+        position: fixed;
+        top: 19px;
+        left: 270px;
+        z-index: 4;
+        background-image: url("../img/icons/close.svg");
+        /*transition: .3s left;*/
+
     }
 
     .main-nav {
@@ -251,8 +259,8 @@
         flex-direction: column;
         background-color: var(--black);
         transition: .3s;
-        min-height: 100vh;
-        position: absolute;
+        position: fixed;
+        height: 100%;
         top: 0;
         left: 0;
         margin-right: 0;
@@ -260,6 +268,7 @@
 
     .main-list {
         flex-direction: column;
+        overflow-y: scroll;
     }
 
     .btn-list {
@@ -269,6 +278,7 @@
     .burger-button:checked ~ .main-nav {
         position: fixed;
         transform: translate(0);
+
     }
 
     section {
@@ -427,3 +437,154 @@
         text-align: center;
     }
 }
+
+@media screen and (max-width: 770px) {
+    .hero-section {
+        padding-bottom: 120px;
+    }
+
+    .hero-section h2 {
+        font-size: 44px;
+    }
+
+    .contact-section {
+        padding: 40px 0;
+    }
+
+    .contact-list {
+        grid-template-columns: 1fr;
+    }
+
+    .contact-list li:last-child {
+        grid-column: auto;
+    }
+
+    .main-img {
+        object-fit: contain;
+        height: 360px;
+        width: 100%;
+    }
+
+    .secondary-img {
+        left: 3%;
+        width: 35%;
+    }
+    .third-img {
+        right: 4%;
+        width: 35%;
+    }
+
+    .about-text {
+        padding: 30px;
+    }
+
+    h2 {
+        font-size: 40px;
+        margin: 10px 0;
+    }
+
+    main section {
+        padding: 60px 0;
+    }
+
+    .opinion-cards {
+        grid-template-columns: 1fr;
+    }
+
+    .opinion-cards > li {
+        text-align: center;
+    }
+
+    .opinion-cards li:last-child {
+        grid-column: auto;
+        width: 100%;
+    }
+
+    .skill-section {
+        padding: 60px 15px;
+    }
+
+    .skill-section article {
+        padding: 0;
+        row-gap: 0;
+    }
+
+    .skill-section > p {
+        margin-bottom: 2.3em;
+    }
+
+    .skill-section article img {
+        min-height: auto;
+    }
+
+    .formation-section {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+    .cards-list {
+        grid-template-columns: 1fr;
+        padding: 0;
+    }
+
+    .cards-list .formation-card:last-child {
+        grid-column: 1;
+        width: 100%;
+    }
+
+    .footer-contact-list {
+        align-items: center;
+        text-align: center;
+        background-size: contain;
+    }
+
+    .footer-contact-list h3 {
+        margin: 10px 0;
+    }
+
+    .footer-list {
+        flex-direction: column;
+    }
+
+    .footer-list > li {
+        width: 100%;
+    }
+
+    .footer-list a {
+        padding: 20px 0;
+        width: 100%;
+    }
+
+    footer .contact-list {
+        padding-bottom: 60px;
+    }
+}
+
+@media screen and (max-width: 770px) {
+    .main-img {
+        object-fit: cover;
+        width: 75%;
+    }
+
+    .imgs-li > figure {
+        display: flex;
+        justify-content: center;
+    }
+
+    .about-text h3 {
+        margin: 10px 0;
+    }
+
+    .about-text {
+        padding: 20px;
+    }
+
+    .skills-list > li {
+        text-align: center;
+    }
+
+    .footer-contact-list {
+        padding: 20px;
+    }
+}
+
