--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,7 +1,8 @@
 /* MAX SCREEN */
 @media screen and (min-width: 1280px) {
     .burger-button,
-    button[id="burgerButton"] {
+    button[id="burgerButton"],
+    .close-burger-button {
         display: none;
     }
 
@@ -77,7 +78,8 @@
 /* MID SCEEN */
 @media screen and (max-width: 1280px) and (min-width: 991px) {
     .burger-button,
-    button[id="burgerButton"] {
+    button[id="burgerButton"],
+    .close-burger-button {
         display: none;
     }
 
