:memo: Fix background-repeat on close button burger

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -198,6 +198,7 @@
         background-image: url("../img/icons/close.svg");
         background-size: contain;
         background-position: center;
+        background-repeat: no-repeat;
         border: none;
         cursor: pointer;
         background-color: transparent;
