--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 
 * {
     box-sizing: border-box;
+    /*transition: 1s;*/
 }
 
 body {
@@ -34,6 +35,7 @@ p {
     font-family: "DM Sans", sans-serif;
     font-size: 1.125em; /* 18px / 16px */
     color: var(--gray);
+
 }
 
 img {
@@ -51,6 +53,12 @@ img {
     width: 1px;
 }
 
+/*.sub-list {*/
+/*    height: 0;*/
+/*    overflow: hidden;*/
+/*    transition: height 0.3s ease-in-out;*/
+/*}*/
+
 .header-list,
 section > article,
 .contact-list,
@@ -65,9 +73,17 @@ footer > ul {
     /*border: 1px solid greenyellow;*/
 }
 
+h1, h2, h3 {
+    font-family: "Space Grotesk", sans-serif;
+}
+
+.navbar-title {
+    font-size: 32px;
+    letter-spacing: 0.027em;
+}
+
 h2,
 .about-title {
-    font-family: "Space Grotesk", sans-serif;
     font-size: 2.625em; /* 42px / 16px */
     font-weight: 400;
     line-height: 1.15em;
@@ -76,7 +92,6 @@ h2,
 }
 
 h3 {
-    font-family: "Space Grotesk", sans-serif;
     font-size: 1.125em; /* 18px / 16px */
     font-weight: 400;
     line-height: 1.2em;
@@ -122,7 +137,6 @@ small {
 .top-btn:hover {
     background-image: url("../img/icons/arrow-down-hover.svg");
     background-color: var(--black);
-
 }
 
 /*--------*/
@@ -239,14 +253,12 @@ footer nav h3 {
     margin-right: 3.125em; /* 50px / 16px */
 }
 
-.main-list a,
-.main-list .dropdown-btn {
+.main-list > li {
     display: inline-block;
     font-size: 1.125em; /* 18px / 16px */
     text-decoration: none;
     padding: 20px;
     transition: 0.3s;
-    margin: 0.625em 0; /* 10px / 16px */
     line-height: 1.43em;
 }
 
@@ -262,8 +274,14 @@ footer nav h3 {
 
 .dropdown-btn {
     cursor: pointer;
+    position: relative;
 }
 
+.dropdown-btn > span,
+.main-list > li > a {
+    display: inline-block;
+    margin: 0.625em 0; /* 10px / 16px */
+}
 /*--------------*/
 /* HERO SECTION */
 /*--------------*/
@@ -385,7 +403,7 @@ footer nav h3 {
 }
 
 .opinion-section h2 {
-    max-width: 9.619em; /* 404 / 42 */
+    max-width: 10em; /* 404 / 42 */
 }
 
 .opinion-section p {
@@ -443,10 +461,6 @@ footer nav h3 {
 
 .skill-section article {
     grid-column-gap: 3.75em; /* 60 / 16 */
-
-}
-
-.skill-section figure {
 }
 
 .skill-section article img {
@@ -604,12 +618,10 @@ footer nav h3 {
 
 /* FOOTER */
 
-footer {
-}
-
 footer nav {
     justify-content: space-between;
     border-bottom: 1px solid var(--dark-grey);
+    padding: 0;
 }
 
 footer nav h3 {
@@ -683,7 +695,6 @@ footer .contact-list {
 footer form {
     display: flex;
     flex-direction: column;
-    min-width: 21.875em; /* 350 / 16 */
 }
 
 footer form > label {
@@ -700,3 +711,10 @@ footer form > input {
 footer form > button {
     margin-top: 2em; /* 30 / 15 */
 }
+
+/* ON SCREEN ANIMATION */
+.js {
+    transform: translateY(100px);
+    opacity: 0;
+}
+
