--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -461,6 +461,7 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-row-gap: 20px;
+        padding-bottom: 60px;
     }
 
     .contact-list li {
