Fix overflox burger menu

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -189,6 +189,8 @@ nav.opened {
     display: flex;
     flex-direction: column;
     padding-left: 15px;
+    overflow-y: scroll;
+
 }
 
 .dropdown-btn > h3,
