--- a/css/responsive.css
+++ b/css/responsive.css
@@ -160,6 +160,7 @@
         align-items: center;
         padding-left: 0;
         margin-right: 20px;
+        overflow-y: initial;
     }
 
     .btn-list {
